--- a/eshop-adservice/src/main/resources/application.properties
+++ b/eshop-adservice/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/eshop_db
 spring.datasource.username=eshop_user
 spring.datasource.password=password
+
+spring.sleuth.sampler.probability=1.0
+spring.sleuth.web.skipPattern=(^cleanup.*|.+favicon.*)
+spring.sleuth.propagation-keys=x-request-id,x-ot-span-context
