--- a/eshop-adservice/build.gradle
+++ b/eshop-adservice/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'    
     implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-trace:1.2.6.RELEASE'
 
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
