--- a/eshop-cartservice/build.gradle
+++ b/eshop-cartservice/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'io.nats:jnats:2.6.8'
     implementation 'io.nats:nats-spring:0.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-trace:1.2.6.RELEASE'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
